--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,10 @@ jobs:
           ls -la
           pwd
           whoami
+      - name: Test commands
+      - run: |
+          npm --version
+          node --version
       - name: Run tests
         run: |
           npm install chai
