--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
           pwd
           whoami
       - name: Test commands
-      - run: |
+        run: |
           npm --version
           node --version
       - name: Run tests
