--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,6 @@ jobs:
           node --version
       - name: Run tests
         run: |
-          echo npm install chai
-          echo node sketch.js
+          npm install chai | echo
+          echo node sketch.js | echo
 
