--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,6 @@ jobs:
           node --version
       - name: Run tests
         run: |
-          npm install chai | echo
-          echo node sketch.js | echo
+          npm install chai
+        
 
